# Aerial-ground-cooperative-robot

./: README.md  README_cn.md
fly/install/: local_setup.sh  setup.sh
fly/install/mavros_area_planner/share/ament_index/resource_index/package_run_dependencies/: mavros_area_planner
fly/install/mavros_area_planner/share/ament_index/resource_index/parent_prefix_path/: mavros_area_planner
fly/install/mavros_area_planner/share/mavros_area_planner/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
fly/install/test_fly_pkg/lib/test_fly_pkg/: mavros_offboard_target  test_node
fly/install/test_fly_pkg/share/test_fly_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
fly/install/test_fly_pkg/share/test_fly_pkg/cmake/: test_fly_pkgConfig.cmake
fly/log/: latest_build
fly/src/mavros_area_planner/: README.md
fly/src/mavros_area_planner/src/: mavros_csv_area_mission.cpp
fly/src/qviz_demo/: CMakeLists.txt  README.md  README_ROS2_HUMBLE.md  package.xml
fly/src/qviz_demo/OtherWidget/AddLayerWidget/: addlayer.cpp
fly/src/qviz_demo/include/qviz_demo/: qnode.hpp
fly/src/qviz_demo/launch/: static_tf.launch.py
fly/src/qviz_demo/resources/: aerial_map.qrc  aerial_satellite_map.html  icon.qrc  image.qrc  rviz.qrc  task_management.qrc
fly/src/test_fly_pkg/: CMakeLists.txt
fly/src/test_fly_pkg/src/: test_node.cpp
livox_ros_driver2/config/: MID360_config.json
mavros_area_planner/: CMakeLists.txt
mavros_area_planner/scripts/: area_planner_gui.py
qviz_demo/: error.txt
qviz_demo/OtherWidget/AddLayerWidget/: addlayer.h
qviz_demo/OtherWidget/GenerateTask/: generatetask.cpp  generatetask.h
qviz_demo/include/qviz_demo/: main_window.hpp  qrviz.hpp  qtask.h
qviz_demo/resources/: map_manager.qrc
qviz_demo/src/: main_window.cpp  qnode.cpp  qrviz.cpp  qtask.cpp
qviz_demo/ui/: main_window.ui
test_fly_pkg/src/: target_fly_withoutoffboard.cpp
ws_livox/install/: local_setup.sh  setup.sh
ws_livox/install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
ws_livox/install/livox_ros_driver2/share/livox_ros_driver2/: package.sh
ws_livox/log/: latest_build
