<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qviz_demo</name>
  <version>1.0.0</version>
  <description>
    Qt/RViz2 based visualization application for ROS 2 Humble.
  </description>
  <maintainer email="ymgogre@gmail.com">xjy</maintainer>
  <author>xjy</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>nav2_map_server</depend>

  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>qtwebengine5-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
